@@ -51,6 +51,9 @@
 {% endblock %}
 {% block footer %}
     <hr/>
+    <div style="float: left;padding: 10px">
+        {{ user.display_name }}
+    </div>
     <div style="float: right;padding: 10px">
     Version: {% version %}
     </div>
