@@ -153,14 +153,12 @@ class Service(MasterDataModel):
             return None
 
     def save(self, force_insert=False, force_update=False, using=None, update_fields=None):
-        v = self.viewset()
-        model = v.get_queryset().model
-        ct = ContentType.objects.get_for_model(model)
-        self.linked_models.add(ct)
-        # TODO: remove me
-        print(111, "service.py:160", ct)
         if self.pk:
             try:
+                v = self.viewset()
+                model = v.get_queryset().model
+                ct = ContentType.objects.get_for_model(model)
+                self.linked_models.add(ct)
                 self.viewset._service = None
             except Exception as e:
                 logger.exception(e)
