@@ -3,6 +3,7 @@
 * add ability to invalidate cache directly from admin endpoint
 * add ability to queue task from task log
 * invalidate cache on dataset refresh
+* add RedisBoard to monitor cache entries
 
 
 1.5
